<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Llamada">

    <TextView
        android:id="@+id/txt_Pers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="@string/lla_lblPers"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="118dp" />

    <TextView
        android:id="@+id/txt_Num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/lla_lblTel"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="167dp" />

    <Button
        android:id="@+id/btn_Llamar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="19sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/lla_btnLlamar"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="296dp" />

    <Button
        android:id="@+id/btn_Regresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textStyle="bold"
        android:textSize="19sp"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/fot_btnRegresar"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="438dp" />
</LinearLayout>